[package]
name = "mvp"
version = "0.1.0"
authors = ["Artem Kanev <a-kanev@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
legion = { version = "0.3" }
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
warp = "0.2"
